--- a/node2/elements.conf
+++ b/node2/elements.conf
@@ -1,3 +1,14 @@
+validatepegin=0
+defaultpeggedassetname=fed
+initialfreecoins=50000000000000
+initialreissuancetokens=200000000
+
+chain=federation_demo
+daemon=1
+listen=1
+txindex=1
+
+[federation_demo]
 rpcuser=user4
 rpcpassword=password4
 rpcport=18890
@@ -5,9 +16,3 @@ port=18891
 
 connect=localhost:18893
 connect=localhost:18889
-
-initialfreecoins=50000000000000
-chain=federation_demo
-daemon=1
-listen=1
-txindex=1
